# Live555-cmake

./: README.md
app/: build.gradle
app/src/androidTest/java/com/vf/cantimage/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/live555/BasicUsageEnvironment/: BasicUsageEnvironment.cpp
app/src/main/cpp/live555/UsageEnvironment/include/: UsageEnvironment.hh
app/src/main/cpp/live555/groupsock/: GroupsockHelper.cpp
app/src/main/cpp/live555/groupsock/include/: GroupsockHelper.hh
app/src/main/cpp/live555/liveMedia/: GenericMediaServer.cpp  InputFile.cpp  Media.cpp
app/src/main/cpp/live555/liveMedia/include/: Media.hh
app/src/main/cpp/live555/mediaServer/: DynamicRTSPServer.cpp  Livesssmediaserver.h  live555MediaServer.cpp
app/src/main/java/com/vf/cantimage/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/vf/cantimage/: ExampleUnitTest.kt
doc/: DynamicRTSPServer.md  moduleINFO.md
gradle/wrapper/: gradle-wrapper.properties
